# Changelog

All notable changes to `eloquent-uuid` will be documented in this file

## 1.4.0 - 2023-09-18

- Added support for Laravel 10

## 1.4.0 - 2021-06-10

- Added support for Laravel 9

## 1.3.0 - 2021-06-10

- Fixed support for PHP 8
- Dropped support for laravel 5

## 1.2.0 - 2020-12-09

- Added support for PHP 8

## 1.1.2 - 2020-09-11

- Added support for laravel 8

## 1.1.1 - 2020-03-31

- Added support for ramsey/uuid 4

## 1.1.0 - 2020-03-31

- Added support for laravel 7

## 1.0.2 - 2019-11-18

- Uuid casting for BinaryUuid

## 1.0.1 - 2019-11-18

- Fixed keyType auto string casting

## 1.0.0 - 2019-11-18

- initial release