@@ -11,12 +11,12 @@
   ],
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/database": "^6.20.26|^7.30.4|^8|^9|^10",
-    "illuminate/support": "^6|^7|^8|^9|^10",
+    "illuminate/database": "^7.30.4|^8|^9|^10",
+    "illuminate/support": "^7|^8|^9|^10",
     "ramsey/uuid": "^3|^4"
   },
   "require-dev": {
-    "illuminate/events":"^6|^7|^8|^9|^10",
+    "illuminate/events":"^7|^8|^9|^10",
     "orchestra/testbench": "^4|^5|^6|^7",
     "phpunit/phpunit": "^9.1"
   },
