@@ -5,6 +5,7 @@ All notable changes to `eloquent-uuid` will be documented in this file
 ## 1.4.0 - 2023-09-18
 
 - Added support for Laravel 10
+- Dropped support for laravel 6
 
 ## 1.4.0 - 2021-06-10
 
